# oz_03_collabo-002-BE

./: .dockerignore  .gitignore  Dockerfile  README.md  dev.env  docker-compose-dev.yml  docker-compose.yml  nginx.conf  pyproject.toml  requirements.dev.txt  requirements.txt
.github/: pull_request_template.md
.github/workflows/: cd.yml  ci-docker.yml  ci.yml  docker-ci.yml
customk/: manage.py  mypy.ini  pytest.ini  ruff.toml
customk/classes/: admin.py  consumers.py  forms.py  models.py  routing.py  serializers.py  urls.py  utils.py  views.py
customk/classes/migrations/: 0001_initial.py  0002_class_is_viewed.py  0003_classdate_person.py  0004_class_created_at_class_updated_at.py  0005_alter_class_address.py  0006_exchangerate.py  0007_alter_class_created_at.py  0008_rename_course_classdate_class_id_and_more.py  0009_class_class_type.py  0010_alter_classimages_image_url.py  0011_alter_classimages_image_url.py  0012_alter_classimages_image_url.py  0013_category_genre_class_category_class_genre.py  0014_alter_class_address.py  0015_class_discount_rate.py  0016_remove_classimages_image_url_and_more.py  0017_remove_classimages_description_image_url_and_more.py  0018_remove_classimages_description_image_urls_and_more.py  0019_alter_classimages_detail_image_url_and_more.py  0020_remove_classimages_description_image_url_and_more.py  0021_alter_class_max_person_alter_class_require_person.py  0022_alter_classdate_person.py  0023_remove_class_category_alter_class_genre_and_more.py
customk/classes/tests/: conftest.py  test_class_api.py  test_class_model.py
customk/common/: apps.py  models.py  serializers.py
customk/common/services/: ncp_api_conf.py
customk/config/: asgi.py  authentication.py  settings.py  urls.py
customk/favorites/: admin.py  models.py  serializers.py  services.py  urls.py  views.py
customk/favorites/migrations/: 0001_initial.py
customk/favorites/tests/: conftest.py  test_favorite_api.py
customk/notifications/: admin.py  models.py  urls.py  views.py
customk/notifications/migrations/: 0001_initial.py  0002_auto_20240906_1518.py  (+3 more)
customk/payments/: admin.py  models.py  serializers.py  services.py  signals.py  urls.py
customk/questions/: admin.py  apps.py  models.py  serializers.py  signals.py  urls.py  views.py
customk/reactions/: admin.py  models.py  urls.py  views.py
customk/reviews/: admin.py  models.py  serializers.py  urls.py  views.py
customk/scripts/: start-deploy.sh  start-dev.sh  start.sh
customk/users/: admin.py  models.py  urls.py
nginx/: Dockerfile  nginx.conf  nginx.conf.template  start.sh
(+60 files in other folders)
