[tool.poetry]
name = "oz-03-collabo-002-be"
version = "0.1.0"
description = ""
authors = ["Gomnonix <lee20481997@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1"
djangorestframework = "^3.15.2"


[tool.poetry.group.dev.dependencies]
ruff = "^0.5.7"
mypy = "^1.11.1"
django-stubs = "^5.0.4"
djangorestframework-stubs = "^3.15.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ['E', 'F', 'W', 'A', 'PLC', 'PLE', 'PLW', 'I']
ignore = [
    "E402",   # false positives for local imports
    "E501",   # line too long
    "F401",   # 사용되지 않는 임포트에 대한 경고.
    "W191",   # 탭을 사용한 들여쓰기에 대한 경고
]

[tool.ruff.format]
quote-style = "double"
indent-style = "tab"

[tool.mypy]
mypy_path = "./customk"
plugins = ["mypy_django_plugin.main", "mypy_drf_plugin.main"]
python_version = 3.12
ignore_missing_imports = true
strict = true
follow_imports = "silent"

[[tool.mypy.overrides]]
module = "*.migrations.*"
ignore_errors = true

[[tool.mypy.overrides]]
module = "manage"
ignore_errors = true

[[tool.mypy.overrides]]
module = "*.tests.*"
ignore_errors = true

[tool.django-stubs]
django_settings_module = "config.settings"